transaction improvements