@@ -3,8 +3,6 @@ package com.example.application.knowledge;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collector;
-import java.util.stream.Collectors;
 
 public class EventHolder {
 
@@ -16,8 +14,9 @@ public class EventHolder {
 
     @Override
     public String toString() {
-        List<String> params = props.entrySet().stream().map(entry -> entry.getKey() + "=" + entry.getValue()).collect(Collectors.toList());
+        List<String> params = props.entrySet().stream()
+                .map(entry -> entry.getKey() + "=" + entry.getValue()).toList();
         return String.join(",", params);
     }
-    
+
 }
